<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_level_6"
    android:orientation="vertical"
    tools:context="com.chaupha.rainbowchess.DashBoardActivity"
    tools:layout_editor_absoluteY="50dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/findopponentRecycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/findopponentButtonRankMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findopponentButtonAll">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/findopponentButtonRankMode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/color_level_9"
        android:text="@string/findopponent_rank_mode"
        android:textColor="@color/color_text"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/findopponentButtonAll"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="@color/color_level_9"
        android:text="@string/findopponent_all_users"
        android:textColor="@color/color_text"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/findopponentButtonFriends"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/findopponentButtonFriends"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/color_level_9"
        android:text="@string/findopponent_friends"
        android:textColor="@color/color_text_2"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/findopponentButtonAll"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
